[gd_scene load_steps=18 format=3 uid="uid://bk1gajbjms22h"]

[ext_resource type="Theme" uid="uid://cfmbhoq8cuoge" path="res://Resources/Themes/ProjectTheme.tres" id="1_qvc2w"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/LoadBox.gd" id="2_iws12"]
[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="3_b4613"]
[ext_resource type="Script" path="res://Scenes and Scripts/Classes/text_edit.gd" id="5_tjbbc"]
[ext_resource type="StyleBox" uid="uid://dvu7f5h7snggp" path="res://Scenes and Scripts/UI/Menus/panelContainer.tres" id="6_cbvfb"]
[ext_resource type="StyleBox" uid="uid://bubm5sx3xn6q5" path="res://Resources/Themes/TitleLabel.tres" id="6_kbw8s"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="7_kqs0u"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="8_eom8q"]
[ext_resource type="Texture2D" uid="uid://cvuwkc5eaq805" path="res://Textures/Buttons/icons/copy.png" id="10_wm7fa"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="11_3lrwy"]
[ext_resource type="Texture2D" uid="uid://cg8lbpdjmqh84" path="res://Textures/Buttons/icons/paste.png" id="11_ne5rf"]
[ext_resource type="Texture2D" uid="uid://blp8o56nt6djk" path="res://Textures/Buttons/X_icon.png" id="11_rg5fn"]
[ext_resource type="Texture2D" uid="uid://bcu6ptkd3fwfe" path="res://Textures/Buttons/icons/submit.png" id="12_buvla"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1o4m4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1v5y6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btth5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f2w4s"]

[node name="LoadBox" type="Control" node_paths=PackedStringArray("GrabAreas")]
layout_mode = 3
anchors_preset = 0
offset_left = 103.0
offset_top = 90.0
offset_right = 103.0
offset_bottom = 90.0
theme = ExtResource("1_qvc2w")
script = ExtResource("2_iws12")
mode = 1
GrabAreas = [NodePath("PanelContainer/VBoxContainer/TitleContainer"), NodePath("PanelContainer/VBoxContainer/PanelContainer")]

[node name="PanelContainer" type="PanelContainer" parent="."]
material = ExtResource("3_b4613")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -17.5
offset_right = 29.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1o4m4")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = -177

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_right = -9

[node name="TextEdit" type="TextEdit" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("7_kqs0u")
theme_override_font_sizes/font_size = 7
theme_override_styles/normal = SubResource("StyleBoxEmpty_1v5y6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btth5")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_f2w4s")
placeholder_text = "[Insert load data]"
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
script = ExtResource("5_tjbbc")

[node name="PopUp" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
visible = false
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = ExtResource("6_cbvfb")
text = "Text Copied!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 2

[node name="Close" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("8_eom8q")]
layout_mode = 2
icon = ExtResource("11_rg5fn")
minimum_size = Vector2(24, 24)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/Close" instance=ExtResource("11_3lrwy")]
tooltip = "Close"

[node name="Copy" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_eom8q")]
layout_mode = 2
icon = ExtResource("10_wm7fa")
minimum_size = Vector2(24, 24)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Copy" instance=ExtResource("11_3lrwy")]
tooltip = "Copy"

[node name="Paste" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_eom8q")]
layout_mode = 2
icon = ExtResource("11_ne5rf")
minimum_size = Vector2(24, 24)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Paste" instance=ExtResource("11_3lrwy")]
tooltip = "Paste"

[node name="SubmitContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Submit" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/SubmitContainer" instance=ExtResource("8_eom8q")]
layout_mode = 2
icon = ExtResource("12_buvla")
minimum_size = Vector2(24, 24)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/SubmitContainer/Submit" instance=ExtResource("11_3lrwy")]
tooltip = "Submit"

[node name="TitleContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("6_kbw8s")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TitleContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/TitleContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(30, 14)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1
theme_override_font_sizes/font_size = 9
text = "Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PopUpTimer" type="Timer" parent="."]
one_shot = true

[connection signal="child_entered_tree" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/TextEdit" to="." method="_on_text_edit_child_entered_tree"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Paste" to="." method="_on_paste_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/SubmitContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="timeout" from="PopUpTimer" to="." method="_on_pop_up_timer_timeout"]
